# TkScheduler

./: README.md  pyproject.toml
.github/scripts/: publish-pypi
.github/workflows/: python-publish.yml
tkscheduler/: __init__.py  __main__.py  main.py
