[project]
name = "tkscheduler"
authors = [
    {name = "Matthew Yang (杨佳明)", email = "matthew.yang204@gmail.com"},
]
maintainers = [
    {name = "matthewyang204", email = "matthew.yang204@gmail.com"},
]
version = "0.1.0"
description = "A timer/scheduler for Tkinter, built to function similarly to PyQt's QTimer"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/matthewyang204/TkScheduler"
homepage = "https://github.com/matthewyang204/TkScheduler"

[tool.setuptools.packages.find]
include = ["tkscheduler*"]
